<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_today"
        android:icon="@drawable/today"
        android:title="@string/title_today" />
    <item
        android:id="@+id/navigation_competitions"
        android:icon="@drawable/football"
        android:title="@string/title_competitions" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more"
        android:title="@string/title_more" />

</menu>