<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/lightGrey"
    android:layout_height="match_parent"
    tools:context=".presentation.competitions.CompetitionDetailsFragment">

    <TextView
        android:id="@+id/tvCompetitionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title_competitions" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/tvCompetitionName">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCompetitionDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:text="@string/description" />

            <include
                android:id="@+id/competitionDescriptionLayout"
                layout="@layout/competition_description" />

            <TextView
                android:id="@+id/tvCompetitionArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:text="@string/area" />

            <include
                android:id="@+id/competitionAreaLayout"
                layout="@layout/competition_area" />

            <TextView
                android:id="@+id/tvCurrentSeason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:text="@string/current_season" />

            <include
                android:id="@+id/competitionCurrentSeasonLayout"
                layout="@layout/competition_current_season" />

            <TextView
                android:id="@+id/tvWinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:text="@string/winner" />

            <include
                android:id="@+id/competitionWinnerLayout"
                layout="@layout/competition_winner" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvNumberOfAvailableSeasons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:text="@string/number_of_available_seasons" />

                <TextView
                    android:id="@+id/tvNumberOfAvailableSeasonsData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    tools:text="7" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvLastUpdated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:text="@string/last_updated" />

            <TextView
                android:id="@+id/tvLastUpdatedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12ssp"
                tools:text="2022-03-20T09:31:30Z" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>